pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-service-unavailable-http-annotation.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-service-unavailable-http
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://foo.bar.com
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - backend:
              service:
                name: unavailable
                port:
                  number: 80
            path: /
            pathType: Prefix
